catawiki categories scraper version 1.0

--- a/notebooks/Catawiki soup parser.ipynb
+++ b/notebooks/Catawiki soup parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "veterinary-permission",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "orange-discovery",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "metric-poetry",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "central-highway",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 5,
    "id": "formal-insulin",
    "metadata": {
     "scrolled": false
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 6,
    "id": "negative-sullivan",
    "metadata": {
     "scrolled": true
@@ -69,19 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 7,
    "id": "still-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
     "json_script_attrs = {\"type\": \"application/ld+json\"}\n",
-    "breadcrumblist_data_json = soup.find(\"script\", attrs=json_script_attrs).string\n",
-    "breadcrumblist = json.loads(breadcrumblist_data_json)"
+    "breadcrumb_list_json = soup.find(\"script\", attrs=json_script_attrs).string\n",
+    "breadcrumb_list = json.loads(breadcrumb_list_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 9,
    "id": "japanese-employer",
    "metadata": {},
    "outputs": [
@@ -112,91 +112,56 @@
        "    'name': 'Militaria Auction (Books 1919-1945)'}}]}"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "breadcrumblist"
+    "breadcrumb_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 31,
    "id": "naval-toddler",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'@type': 'ListItem',\n",
-       "  'position': 1,\n",
-       "  'item': {'@type': 'Thing',\n",
-       "   '@id': 'https://www.catawiki.com/',\n",
-       "   'name': 'Catawiki'}},\n",
-       " {'@type': 'ListItem',\n",
-       "  'position': 2,\n",
-       "  'item': {'@type': 'Thing',\n",
-       "   '@id': 'https://www.catawiki.com/c/1099-militaria-weaponry',\n",
-       "   'name': 'Militaria & Weaponry'}},\n",
-       " {'@type': 'ListItem',\n",
-       "  'position': 3,\n",
-       "  'item': {'@type': 'Thing',\n",
-       "   '@id': 'https://www.catawiki.com/c/717-militaria',\n",
-       "   'name': 'Militaria'}},\n",
-       " {'@type': 'ListItem',\n",
-       "  'position': 4,\n",
-       "  'item': {'@type': 'Thing',\n",
-       "   '@id': 'https://www.catawiki.com/a/442709-militaria-auction-books-1919-1945',\n",
-       "   'name': 'Militaria Auction (Books 1919-1945)'}}]"
+       "{'Militaria & Weaponry': 'https://www.catawiki.com/c/1099-militaria-weaponry',\n",
+       " 'Militaria': 'https://www.catawiki.com/c/717-militaria',\n",
+       " 'Militaria Auction (Books 1919-1945)': 'https://www.catawiki.com/a/442709-militaria-auction-books-1919-1945'}"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "breadcrumblist['itemListElement']"
+    "dict((cat['item']['name'], cat['item']['@id']) for cat in breadcrumb_list['itemListElement'] if cat['item']['name'] != 'Catawiki')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 11,
    "id": "loose-amino",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'@context': 'http://schema.org/',\n",
-       " '@type': 'BreadcrumbList',\n",
-       " 'itemListElement': [{'@type': 'ListItem',\n",
-       "   'position': 1,\n",
-       "   'item': {'@type': 'Thing',\n",
-       "    '@id': 'https://www.catawiki.com/',\n",
-       "    'name': 'Catawiki'}},\n",
-       "  {'@type': 'ListItem',\n",
-       "   'position': 2,\n",
-       "   'item': {'@type': 'Thing',\n",
-       "    '@id': 'https://www.catawiki.com/c/1099-militaria-weaponry',\n",
-       "    'name': 'Militaria & Weaponry'}},\n",
-       "  {'@type': 'ListItem',\n",
-       "   'position': 3,\n",
-       "   'item': {'@type': 'Thing',\n",
-       "    '@id': 'https://www.catawiki.com/c/717-militaria',\n",
-       "    'name': 'Militaria'}},\n",
-       "  {'@type': 'ListItem',\n",
-       "   'position': 4,\n",
-       "   'item': {'@type': 'Thing',\n",
-       "    '@id': 'https://www.catawiki.com/a/442709-militaria-auction-books-1919-1945',\n",
-       "    'name': 'Militaria Auction (Books 1919-1945)'}}]}"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'categories_data_json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-1844de768205>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories_data_json\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'categories_data_json' is not defined"
+     ]
     }
    ],
    "source": [
